<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".OtpVarificationActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:fillViewport="true"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:orientation="vertical"
                android:padding="10dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/waiting_to_automatically_detect_an_sms_n_sent_to_your_mobile_number"
                    android:textColor="@color/white"

                    android:textSize="17sp"
                    android:textStyle="bold"

                    />

                <TextView
                    android:id="@+id/editMobileNo_otpverification_txt"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="+91092487474"
                    android:textColor="@color/green"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/enter_4_digit_otp_below"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:textStyle="bold"

                    />


                <com.goodiebag.pinview.Pinview
                    android:id="@+id/pinview"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    app:cursorVisible="true"
                    app:forceKeyboard="true"
                    app:hint="1"
                    app:inputType="number"
                    app:password="false"
                    app:pinLength="6"
                    app:pinWidth="40dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/don_t_received_the_code"
                        android:textColor="@color/white"
                        android:textSize="13sp"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/resendCode_otpVerification_text"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/resend_code"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"

                        />

                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <Button
                    android:id="@+id/doneVerification_otpverification_linearlayout"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:text="@string/verify"
                    android:textColor="@android:color/white" />
            </RelativeLayout>

            <!-- <LinearLayout
            android:id="@+id/doneVerification_otpverification_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"
            android:background="@color/green">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/technology"/>
        </LinearLayout>-->

        </LinearLayout>
    </ScrollView>

</RelativeLayout>